My_Python_Notebook：定制类-__getitem__

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -496,7 +496,7 @@ class Student(object):
 
 ### \_\_iter\_\_
 
-如果我们希望用 `for ... in` 循环来遍历一个类的实例，像遍历list或tuple那样，就必须实现一个 `__iter__()` 方法，该方法返回一个迭代对象，然后，Python的 `for` 循环就会不断调用该迭代对象的 `__next__()` 方法拿到循环的下一个值，直到遇到 `StopIteration` 错误时退出循环。
+如果我们希望用 `for ... in` 循环来遍历一个类的实例，像遍历 `list` 或 `tuple` 那样，就必须实现一个 `__iter__()` 方法，该方法返回一个迭代对象，然后，Python的 `for` 循环就会不断调用该迭代对象的 `__next__()` 方法拿到循环的下一个值，直到遇到 `StopIteration` 错误时退出循环。
 
 我们以斐波那契数列为例，写一个 `Fib` 类，可以作用于 `for` 循环：
 
@@ -530,6 +530,104 @@ class Fib(object):
 46368
 75025
 ```
+
+---
+
+### \_\_getitem\_\_
+
+`Fib` 类的实例虽然能作用于 `for` 循环，看起来和 `list` 有点像了，但是**没有办法使用下标访问**：
+
+```python
+>>> Fib()[5]
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: 'Fib' object does not support indexing
+```
+
+要能像 `list` 那样按照下标访问元素，需要实现 `__getitem__()` 方法：
+
+```python
+class Fib(object):
+    def __getitem__(self, n):
+        a, b = 1, 1
+        for x in range(n):
+            a, b = b, a + b
+        return a
+```
+
+现在，就可以按下标访问数列的任意一项了：
+
+```python
+>>> f = Fib()
+>>> f[0]
+1
+>>> f[1]
+1
+>>> f[2]
+2
+>>> f[3]
+3
+>>> f[10]
+89
+>>> f[100]
+573147844013817084101
+```
+
+但是 `list` 有个神奇的**切片**方法：
+
+```python
+>>> list(range(100))[5:10]
+[5, 6, 7, 8, 9]
+```
+
+对于 `Fib` 却报错。原因是 **`__getitem__()` 传入的参数可能是一个 `int`，也可能是一个 `slice`（切片对象）**，所以要**做判断**：
+
+```python
+class Fib(object):
+    def __getitem__(self, n):
+        if isinstance(n, int): # n是索引
+            a, b = 1, 1
+            for x in range(n):
+                a, b = b, a + b
+            return a
+        if isinstance(n, slice): # n是切片
+            start = n.start
+            stop = n.stop
+            if start is None:
+                start = 0
+            a, b = 1, 1
+            L = []
+            for x in range(stop):
+                if x >= start:
+                    L.append(a)
+                a, b = b, a + b
+            return L
+```
+
+现在再试试对 `Fib` 类的实例使用切片：
+
+```python
+>>> f = Fib()
+>>> f[0:5]
+[1, 1, 2, 3, 5]
+>>> f[:10]
+[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]
+```
+
+但是**没有对 `step`（步长）参数作处理**：
+
+```python
+>>> f[:10:2]
+[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]
+```
+
+**也没有对负数作处理**，所以，要正确实现一个完整的 `__getitem__()` 还是有很多工作要做的。
+
+此外，如果把对象看成 `dict`，那么 `__getitem__()` 的参数也可能是一个可以作key的object，例如 `str`。
+
+与 `__getitem__()` 方法对应的是 `__setitem__()` 方法，把对象视作 `list` 或 `dict` 来对一个/多个位置进行赋值。除此之外，还有 `__delitem__()` 方法，用于删除某个位置的元素。
+
+总之，通过实现上面的方法，可以让我们自己定义的类表现得和Python自带的 `list`、`tuple`、`dict` 没什么区别，这完全归功于**动态语言的“鸭子类型”特点**，**不需要强制继承某个接口就能实现该接口的部分功能**。
 
 ---
 
