My_Python_Notebook：定制类-__getattr__

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -631,3 +631,162 @@ class Fib(object):
 
 ---
 
+### \_\_getattr\_\_
+
+正常情况下，当我们调用类的方法或属性时，如果不存在，就会报错。比如定义Student类：
+
+```python
+class Student(object):
+
+    def __init__(self):
+        self.name = 'Michael'
+```
+
+调用name属性，没问题，但是，调用不存在的score属性，就有问题了：
+
+```python
+>>> s = Student()
+>>> print(s.name)
+Michael
+>>> print(s.score)
+Traceback (most recent call last):
+  ...
+AttributeError: 'Student' object has no attribute 'score'
+```
+
+错误信息很清楚地告诉我们，没有找到score这个attribute。
+
+要避免这个错误，除了可以加上一个score属性外，Python还有另一个机制，那就是写一个 `__getattr__()` 方法，**动态返回一个属性**。修改如下：
+
+```python
+class Student(object):
+
+    def __init__(self):
+        self.name = 'Michael'
+
+    def __getattr__(self, attr):
+        if attr=='score':
+            return 99
+```
+
+**当调用不存在的属性时，Python解释器会试图调用 `__getattr__(self, '属性名')`来尝试获得属性**，依然用 `score` 属性做例子，进行上述定义后，再次执行就变成了：
+
+```python
+>>> s = Student()
+>>> s.name
+'Michael'
+>>> s.score
+99
+```
+
+**动态返回函数**也是完全可以的：
+
+```python
+class Student(object):
+
+    def __getattr__(self, attr):
+        if attr=='age':
+            return lambda: 25
+```
+
+只是调用方式要变为：
+
+```python
+>>> s.age()
+25
+```
+
+注意，**只有在没有找到属性的情况下，才调用 `__getattr__`**，已有的属性，比如 `name`，不会在 `__getattr__` 中查找。
+
+此外，注意到此时调用其他任意属性，如 `s.abc`，返回的是 `None`，这是因为在 `__getattr__` 中我们没有为这些属性定义返回值，那么**默认返回就是 `None`**。要让类只响应特定的几个属性，我们可以**默认抛出 `AttributeError` 错误**：
+
+```python
+class Student(object):
+
+    def __getattr__(self, attr):
+        if attr=='age':
+            return lambda: 25
+        raise AttributeError('\'Student\' object has no attribute \'%s\'' % attr)
+```
+
+这样就相当于**把一个类的属性和方法调用都进行动态化处理**了，不需要其他特殊手段。
+
+这种**完全动态调用的特性有什么实际作用呢**？作用就是，可以针对完全动态的情况作调用。举个例子，现在很多网站都搞 REST API，比如新浪微博、豆瓣啥的，调用API的URL类似：
+
+```python
+http://api.server/user/friends
+http://api.server/user/timeline/list
+```
+
+如果要写SDK，为每个URL对应的API都写一个方法，那得累死，而且，API一旦改动，SDK也要改。
+
+借助完全动态的 `__getattr__` 方法，我们可以非常方便地实现**链式调用**：
+
+```python
+class Chain(object):
+    def __init__(self, path=''):
+        self._path = path
+    def __getattr__(self, path):
+        return Chain('%s/%s' % (self._path, path))
+    def __str__(self):
+        return self._path
+    __repr__ = __str__
+```
+
+试试：
+
+```python
+>>> chain = Chain('http://api.server')
+>>> API1 = chain.user.friends
+>>> print(API1)
+http://api.server/user/friends
+>>> API2 = chain.user.timeline.list
+>>> print(API2)
+http://api.server/user/timeline/list
+```
+
+由于 `__getattr__` 返回的也是一个 `Chain` 类的实例，所以后面继续接着使用点符访问属性也是可以的，这就是**链式调用**的本质。这样，**无论想调用什么API，SDK都可以根据不同的URL进行完全动态的调用，不需要随API的增加而改变**！相当方便！！
+
+还有一些REST API会**把参数放在URL中**，比如GitHub的API：
+
+```python
+GET /users/:user/repos
+```
+
+调用时，需要把 `:user` 替换为实际用户名。这时我们希望可以用这样的链式调用来获取API：
+
+```python
+chain().users('michael').repos
+```
+
+尝试一下：
+
+```python
+class Chain(object):
+    def __init__(self, path=''):
+        self._path = path
+    def __getattr__(self, path):
+        return Chain('%s/%s' % (self._path, path))
+    def users(self, username):
+        return Chain('%s/%s' % (self._path, username))
+    def __str__(self):
+        return self._path
+    __repr__ = __str__
+```
+
+运行结果：
+
+```python
+>>> chain = Chain('/users')
+>>> chain.users('michael').repos
+/users/michael/repos
+```
+
+当然，除了实现一个 `users` 方法之外，直接在 `getattr` 方法里面使用正则也是可以的。
+
+---
+
+
+
+
+
