My_Python_Notebook：定制类-__CALL__

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -786,6 +786,48 @@ class Chain(object):
 
 ---
 
+### \_\_call\_\_
+
+一个对象实例可以有自己的属性和方法，当我们调用实例方法时，我们用 `实例名.方法名()` 的方式来调用。能不能**直接把实例本身当作一个方法调用**呢？在Python中，答案是肯定的。
+
+对任何类来说，**只需要实现 `__call__()` 方法，就可以直接对该类的实例进行调用**。比如：
+
+```python
+class Student(object):
+    def __init__(self, name):
+        self.name = name
+
+    def __call__(self):
+        print('My name is %s.' % self.name)
+```
+
+调用方式如下：
+
+```python
+>>> s = Student('Michael')
+>>> s() # 调用实例本身，self参数不需要传入
+My name is Michael.
+```
+
+和普通的函数和方法一样，我们还可以为 `__call__()` 方法定义其他参数。但有一点很特别，我们注意到**类的实例都是运行期间动态创建出来的**，而一般来说可调用对象（函数/方法）都是预先定义的，所以说当我们把实例本身变成可调用的方法时，实际上我们是**动态创建了可调用对象**。
+
+**能被调用的对象就是一个 `Callable` 对象**，要判断一个对象是否可调用可以使用Python内置的 `callable` 函数：
+
+```python
+>>> callable(Student())
+True
+>>> callable(max)
+True
+>>> callable([1, 2, 3])
+False
+>>> callable(None)
+False
+>>> callable('str')
+False
+```
+
+---
+
 
 
 
