My_Python_Notebook：定制类-小结

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -828,7 +828,15 @@ False
 
 ---
 
+### 小结
 
+Python的class允许定义许多定制方法，可以让我们非常方便地生成特定的类。
+
+本节介绍的是最常用的几个定制方法，还有很多可定制的方法，请参考[Python的官方文档](https://docs.python.org/3/reference/datamodel.html#special-method-names)。
+
+---
+
+<br>
 
 
 
