My_Python_Notebook：使用枚举类-为何需要枚举类

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -830,7 +830,7 @@ False
 
 ### 小结
 
-Python的class允许定义许多定制方法，可以让我们非常方便地生成特定的类。
+Python中的类允许定义许多定制方法，可以让我们非常方便地生成特定的类。
 
 本节介绍的是最常用的几个定制方法，还有很多可定制的方法，请参考[Python的官方文档](https://docs.python.org/3/reference/datamodel.html#special-method-names)。
 
@@ -838,5 +838,22 @@ Python的class允许定义许多定制方法，可以让我们非常方便地生
 
 <br>
 
+## 使用枚举类
 
+### 为何需要枚举类
+
+当我们需要**定义常量/枚举值**时，一个比较常见的办法是用大写变量通过整数来定义，例如月份：
+
+```python
+JAN = 1
+FEB = 2
+MAR = 3
+...
+NOV = 11
+DEC = 12
+```
+
+这样做的好处是简单，缺点是把数据类型变为了 `int` 型，并且在Python中仍然是变量，因此**可能会在使用者无法意识到的情况下被错误的操作改变值**。
+
+---
 
