My_Python_Notebook：使用枚举类-如何使用枚举类

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -857,3 +857,39 @@ DEC = 12
 
 ---
 
+### 如何使用枚举类
+
+更好的方法是使用Python提供的枚举类 `Enum`，**把每一个枚举对象作为枚举类的一个属性**：
+
+```python
+from enum import Enum
+
+Month = Enum('Month', ('Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec')) # 创建一个枚举类的实例
+```
+
+这样我们就获得了一个**类型为 `Month`** 的枚举类，可以直接使用 `Month.Jan` 来引用一个常量，或者枚举它的所有成员：
+
+```python
+>>> for name, member in Month.__members__.items():
+...     print(name, '=>', member, ',', member.value)
+...
+Jan => Month.Jan , 1
+Feb => Month.Feb , 2
+Mar => Month.Mar , 3
+Apr => Month.Apr , 4
+May => Month.May , 5
+Jun => Month.Jun , 6
+Jul => Month.Jul , 7
+Aug => Month.Aug , 8
+Sep => Month.Sep , 9
+Oct => Month.Oct , 10
+Nov => Month.Nov , 11
+Dec => Month.Dec , 12
+```
+
+特别地，枚举类中的每个成员会被分配一个 `int` 型的 `value` 属性，默认**按初始化顺序从1开始计数**。
+
+---
+
+
+
