My_Python_Notebook：使用枚举类-自定义枚举类

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -891,5 +891,74 @@ Dec => Month.Dec , 12
 
 ---
 
+### 自定义枚举类
+
+如果需要**更精确地控制枚举类型**，可以继承 `Enum` 类然后进行自定义：
+
+```python
+from enum import Enum, unique
+
+@unique
+class Weekday(Enum):
+    Sun = 0 # Sun的value被设定为0
+    Mon = 1
+    Tue = 2
+    Wed = 3
+    Thu = 4
+    Fri = 5
+    Sat = 6
+```
+
+`@unique` 装饰器可以帮助我们**检查枚举值是否存在重复**，注意属性名字重复也会报错，但是与 `@unique` 装饰器无关。
+
+自定义的枚举类使用方法和使用 `Enum` 构造的类似：
+
+```python
+>>> day1 = Weekday.Mon         # 按属性访问
+>>> print(day1)                # 打印枚举变量
+Weekday.Mon
+>>> day1                       # 直接显示枚举变量
+<Weekday.Mon: 1>
+>>> day1.name                  # 获得枚举变量的名称
+'Mon'
+>>> day1.value                 # 获得枚举变量的值
+1
+```
+
+```python
+>>> print(Weekday['Tue'])      # 使用属性名作下标访问
+Weekday.Tue
+>>> print(day1 == Weekday.Mon) # 属性之间可以直接进行比较
+True
+>>> print(day1 == Weekday.Tue)
+False
+```
+
+```python
+>>> print(Weekday(1))           # 把类作为一个方法调用，传入枚举值
+Weekday.Mon
+>>> print(day1 == Weekday(1))
+True
+>>> Weekday(7)                  # 找不到该枚举值对应的属性
+Traceback (most recent call last):
+  ...
+ValueError: 7 is not a valid Weekday
+```
+
+```python
+>>> for name, member in Weekday.__members__.items(): # 遍历枚举类
+...     print(name, '=>', member)
+...
+Sun => Weekday.Sun
+Mon => Weekday.Mon
+Tue => Weekday.Tue
+Wed => Weekday.Wed
+Thu => Weekday.Thu
+Fri => Weekday.Fri
+Sat => Weekday.Sat
+```
+
+---
+
 
 
