My_Python_Notebook：使用元类-type函数

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -968,3 +968,64 @@ Sat => Weekday.Sat
 
 <br>
 
+## 使用元类
+
+### type函数
+
+动态语言和静态语言最大的不同，就是在动态语言中，**函数和类的定义，不是编译时定义的，而是运行时动态创建的**。
+
+比方说我们要定义一个 `Hello` 类，首先编写一个 `hello.py` 模块，里面的代码如下：
+
+```python
+class Hello(object):
+    def hello(self, name='world'):
+        print('Hello, %s.' % name)
+```
+
+当Python解释器**导入 `hello` 模块时**，就会依次执行该模块的所有语句（与我们在交互环境下逐个语句输入来定义类一样），从而**动态创建出一个类对象**（注意这里说的是类对象而不是实例对象），测试如下：
+
+```python
+>>> from hello import Hello # 这个语句创建了一个名为Hello的类对象
+>>> h = Hello()             # 创建一个Hello类的实例h
+>>> h.hello()
+Hello, world.
+>>> print(type(Hello))      # Hello对象的类型为type
+<class 'type'>
+>>> print(type(h))          # 而Hello类实例的类型为hello.Hello
+<class 'hello.Hello'>
+>>> type(str)               # str是一个类型
+<class 'type'>
+>>> type(int)               # int也是一个类型
+<class 'type'>
+```
+
+`type()` 函数可以用来**查看一个变量的类型**，`Hello` 是一个类，它的类型就是 `type`，而 `h` 是一个实例，它的类型就是它所属的类。
+
+前面说到，**在Python中，类的定义是运行时动态创建的**。而**动态创建类使用的其实是 `type()`函数**。`type()` 函数**既可以返回一个变量的类型，又可以创建出新的类型**。依然举 `Hello` 类为例子，但我们这次使用 `type()` 函数来创建 `Hello` 类而不使用显式的 `class Hello`：
+
+```python
+>>> def fn(self, name='world'): # 先定义函数
+...     print('Hello, %s.' % name)
+...
+>>> Hello = type('Hello', (object,), dict(hello=fn)) # 创建Hello class
+>>> h = Hello()
+>>> h.hello()
+Hello, world.
+>>> print(type(Hello))
+<class 'type'>
+>>> print(type(h))
+<class '__main__.Hello'>
+```
+
+使用 `type()` 函数创建一个类对象，需要依次传入以下3个参数：
+
+- **类名**
+- **继承的父类集合**：Python支持多重继承，所以这里用一个 `tuple` 来囊括继承的所有父类。注意只有一个父类时，要采用 `tuple` 的单元素写法，不要漏掉逗号。
+- **类的方法名与函数的绑定**：在上面的例子中，我们把函数 `fn` 绑定到方法名 `hello` 上。也即类 `Hello` 的方法 `hello` 就是函数 `fn`，注意**这和这章开头所说的动态绑定方法是不同的**。
+
+通过 `type()` 函数创建的类和直接写类是完全一样的。事实上，**Python解释器遇到类定义时，在扫描类定义的语法之后，就是调用 `type()` 函数来创建类的**。
+
+正常情况下，我们都用 `class 类名(父类1, 父类2, ...)` 的方式来定义类，但是，`type()` 函数也允许我们动态创建类。
+
+动态语言能够支持运行期间动态创建类，这和静态语言有非常大的不同。关于这两者的区别，感兴趣的话可以再查找其他资料。
+
