My_Python_Notebook：使用元类-什么是元类

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -1029,3 +1029,43 @@ Hello, world.
 
 动态语言能够支持运行期间动态创建类，这和静态语言有非常大的不同。关于这两者的区别，感兴趣的话可以再查找其他资料。
 
+---
+
+### 什么是元类
+
+除了使用 `type()` 函数动态创建类以外，**要控制类的创建行为，还可以使用元类（metaclass）。**
+
+怎么理解什么是元类呢？简单地解释一下：
+
+- 当我们定义了类以后，以类为模版就可以创建出实例了。
+- 但如果我们要创建类呢？那就必须先定义元类，有了元类之后，以元类为模版就可以创建出类了。
+- 连起来就是：**以元类为模版创建类，以类为模版创建该类的实例**。
+
+也就是说，**可以把类看成是元类创建出来的“实例”**。
+
+![metaclass](https://i.stack.imgur.com/QQ0OK.png)
+
+图片来源：[What is a metaclass in Python?](http://stackoverflow.com/questions/100003/what-is-a-metaclass-in-python)
+
+在上一个小节中，我们了解到可以使用 `type()` 函数创建类，但 `type` 的本质是什么呢？
+
+```python
+>>> help(type)
+Help on class type in module builtins:
+
+class type(object)
+ |  type(object_or_name, bases, dict)
+ |  type(object) -> the object's type
+ |  type(name, bases, dict) -> a new type
+ |
+ |  Methods defined here:
+ |
+ |  __call__(self, /, *args, **kwargs)
+ |      Call self as a function.
+ ...
+```
+
+其实呀， `type` 本身就是一个类，因为实现了 `__call__` 方法，所以可以用 `type()` 的方式进行调用。实际上，**`type` 是一个元类**，我们**创建的任意类都是以 `type` 类为模版创建的**。
+
+---
+
