My_Python_Notebook：使用元类-怎样使用元类

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -1065,7 +1065,64 @@ class type(object)
  ...
 ```
 
-其实呀， `type` 本身就是一个类，因为实现了 `__call__` 方法，所以可以用 `type()` 的方式进行调用。实际上，**`type` 是一个元类**，我们**创建的任意类都是以 `type` 类为模版创建的**。
+其实呀， `type` 本身就是一个类，调用 `type()` 创建类得到的其实就是 `type` 类的实例。所以所有类对象的类型都是 `type`。不难分析出，**`type` 是一个元类**，并且**类都是默认以元类 `type` 为模版创建的**。
 
 ---
+
+### 怎样使用元类
+
+如果我们想要创建一个元类，并且想以这个元类为模版创建类，那么定义元类的时候，就应当让这个元类**继承自 `type` 类**。
+
+按照习惯，**元类的类名应总是以Metaclass结尾**，以便清楚地表示这是一个元类。下面举一个例子，定义元类 `ListMetaclass`：
+
+```python
+# metaclass是类的模板，所以必须从`type`类型派生：
+class ListMetaclass(type):
+    def __new__(cls, name, bases, attrs):
+        attrs['add'] = lambda self, value: self.append(value)
+        return type.__new__(cls, name, bases, attrs)
+```
+
+元类的 `__new__()` 方法用于创建一个类对象，它接收四个参数，依次是：
+
+- 准备创建的类对象；
+- 准备创建的类的名字；
+- 准备创建的类继承的父类集合；
+- 准备创建的类的方法集合。
+
+我们在 `ListMetaclass` 的 `__new__()` 方法中加入了一句 `attrs['add'] = lambda self, value: self.append(value)`，然后调用元类 `type` 的 `__new__()` 方法创建类对象。这多出来的一句，实际上我们是给要创建的类提供了一个 `add` 方法，这个 `add` 方法接收实例本身和一个变量，并把这个变量拼接到实例的尾部。其实就是一个 `append` 方法。
+
+定义好元类 `ListMetaclass` 之后，我们以它为模版创建类，注意**传入关键字参数 `metaclass`**：
+
+```python
+class MyList(list, metaclass=ListMetaclass):
+    pass
+```
+
+传入关键字参数 `metaclass` 后，Python解释器会在创建 `MyList` 类时，通过元类 `ListMetaclass` 的 `__new__()` 方法来创建。因此虽然我们在类定义时没有为 `MyList` 类定义任何方法，但因为它是以元类 `ListMetaclass` 为模版创建的，所以拥有了 `add` 方法。另外，因为它继承了 `list` 类，所以我们相当于创建了一个拥有 `add` 方法的新的 `list` 类，测试一下：
+
+```python
+>>> L = MyList()
+>>> L.add(1) # 使用add方法在列表尾部添加元素
+>> L
+[1]
+>>> L.add(2)
+>>> L
+[1, 2]
+```
+
+普通的 `list` 是没有 `add()` 方法的：
+
+```python
+>>> L2 = list()
+>>> L2.add(1)
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'list' object has no attribute 'add'
+```
+
+但是，直接在 `MyList` 类的定义中写上 `add()` 方法不是更简单吗？是的，**正常情况下我们应该直接在类定义中编写方法，而不是通过元类**。
+
+但是，也有需要通过元类修改类定义的情况，ORM就是一个典型的例子。
+
 
