My_Python_Notebook：使用元类-编写ORM框架part1

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -1123,6 +1123,31 @@ AttributeError: 'list' object has no attribute 'add'
 
 但是，直接在 `MyList` 类的定义中写上 `add()` 方法不是更简单吗？是的，**正常情况下我们应该直接在类定义中编写方法，而不是通过元类**。
 
-但是，也有需要通过元类修改类定义的情况，ORM就是一个典型的例子。
+但是，也有需要**通过元类动态修改类定义**的情况，ORM就是一个典型的例子。
 
+### 编写ORM框架
+
+ORM 全称 **Object Relational Mapping（对象-关系映射）**，简单来说就是**把关系型数据库中表格的每一行都映射为一个对象，而每一个表就是一个类**。这样写代码更简单，不用直接操作SQL语句。
+
+要编写一个 ORM 框架供不同的使用者使用，框架中的所有类都应该能动态定义，因为每位使用者的需求不同，需要根据具体的表结构来定义出不同的类。
+
+举个例子，假如使用者想使用这个 ORM 框架定义一个 `User` 类来操作数据库中的表格 `User`，我们期望使用者可以写出这样简洁的形式：
+
+```python
+class User(Model):
+    # 定义类的属性到表格中列的映射：
+    id = IntegerField('id')
+    name = StringField('username')
+    email = StringField('email')
+    password = StringField('password')
+```
+
+```python
+# 创建一个实例：
+u = User(id=12345, name='Michael', email='test@orm.org', password='my-pwd')
+# 插入到表格中：
+u.insert()
+```
+
+也即，用户在使用这个 ORM 框架时，每个表格对应一个类，类定义只需要指定表格每列的字段类型即可，每一行数据都是该类的一个实例。而父类 `Model` 和数据类型 `StringField`、`IntegerField` 等都由 ORM 框架负责提供。`save()` 之类的方法则全部由元类自动完成。**虽然这样元类的编写会比较复杂，但 ORM 的使用者用起来却可以异常简单**。
 
