My_Python_Notebook：使用元类-编写ORM框架part2

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -1151,3 +1151,60 @@ u.insert()
 
 也即，用户在使用这个 ORM 框架时，每个表格对应一个类，类定义只需要指定表格每列的字段类型即可，每一行数据都是该类的一个实例。而父类 `Model` 和数据类型 `StringField`、`IntegerField` 等都由 ORM 框架负责提供。`save()` 之类的方法则全部由元类自动完成。**虽然这样元类的编写会比较复杂，但 ORM 的使用者用起来却可以异常简单**。
 
+想好了希望实现怎样的效果后，我们可以开始编写调用接口。
+
+首先定义 `Field` 类，它是最底层的类，负责保存字段名（列名）和对应的字段类型：
+
+```python
+class Field(object):
+    def __init__(self, name, column_type):
+        self.name = name
+        self.column_type = column_type
+    def __str__(self):
+        return '<%s:%s>' % (self.__class__.__name__, self.name)
+    __repr__ = __str__
+```
+
+在 `Field` 的基础上，我们可以进一步定义各种类型的 `Field`，比如 `StringField`，`IntegerField` 等等：
+
+```python
+class StringField(Field):
+    def __init__(self, name):
+        super(StringField, self).__init__(name, 'varchar(100)')
+
+class IntegerField(Field):
+    def __init__(self, name):
+        super(IntegerField, self).__init__(name, 'bigint')
+```
+
+注意这里使用了 `super` 函数来获取父类的方法，并进行绑定，先看一看官方的解释：
+
+```python
+super(type[, object-or-type])
+  Return the superclass of type. If the second argument is omitted the super object
+  returned is unbound. If the second argument is an object, isinstance(obj, type)
+  must be true. If the second argument is a type, issubclass(type2, type) must be
+  true. super() only works for new-style classes.
+  A typical use for calling a cooperative superclass method is:
+   class C(B):
+       def meth(self, arg):
+           super(C, self).meth(arg)
+  New in version 2.2.
+```
+
+所以这里实际上我们实例化 `StringField` 和 `IntegerField` 时，是调用它们的父类，也即 `Field` 类的 `__init__` 方法进行的，这两个类封装了 `Field` 的功能，**使用者只需要传入字段名就可以了，不需要关心在数据库中类型的名字**。上面的实现比较简单，不需要使用元类。
+
+接下来先理一理整体的实现思路，我们编写 ORM 框架来实现底层的功能，用户使用该框架时，只需要根据自己的需求来为表格定义对应的类，比方说上面举的例子中定义 `User` 类那样。这个类的实例对应表格中的一行，定义一个新实例 `u = User(id=12345, name='Michael', email='test@orm.org', password='my-pwd')`，我们希望得到这个实例后可以通过 `print(u['name'])` 的方式读取字段值，通过 `u['id']=23456` 的方式来修改字段值，这就类似于Python中的 `dict` 的功能，所以我们实际上最底层的父类采用 `dict` 即可。
+
+但是，我们除了 `dict` 的功能之外，肯定还需要实现一些其他功能，比如把新实例插入到数据库的表格中。这些功能我们可以在 `Model` 类中实现，`Model` 类继承 `dict` 类，这样我们就可以像前面说的那样进行读取和修改了。使用者为表格编写类时继承 `Model` 类即可，这样所有表格都能得到 `Model` 类中实现的操作表格的功能了。
+
+但是，我们还注意到一点，我们希望用户定义类的时候，写法尽可能简单，只需要关注有哪些字段，然后**每个字段作为一个属性**，用 `id = IntegerField('id')` 的方式来定义，也即 `属性名 = 字段类型（'字段名'）`，字段类型的实现前面已经说过了。
+
+这里我们需要关注另外一个很重要的点，在实例化得到表格的一行以后，我们希望使用者可以采用 `实例名.属性名 = 值` 的方式来修改这一行某个字段的值。但事实上，使用者定义类的时候，类属性表示的是**以某个字段名为名的某字段类型的实例**，属性的类型是 `StringField` 或者 `IntegerField`。而在读取或修改一个实例的属性值时，我们希望实例属性表示的是**这一行数据在这个字段的值**，属性的类型是 `str` 或者 `int`。这里说得比较绕，简单归纳来说就是**用户定义类的方式和使用该类实例的方式不相符**。
+
+我们希望使用者定义类的方式尽可能简单，同时也能用简单的方式修改字段值（实例的属性值），但由于**类属性和实例属性同名时，对实例属性赋值会覆盖类属性**，所以我们必须进行一些修改去避免这个问题。怎么实现呢？这时候我们就要用到元类了，虽然作为框架的编写者，我们要做的工作比较多，但这样使用者用起来就很方便了，他们依然可以很简单地定义类，但**运行时类定义会被元类动态修改**，我们可以把类属性该为其他名字，这样类定义中的类属性信息就可以保留下来了，而且不会被实例属性的赋值所覆盖。
+
+另外，由于使用者不一定明白元类这么复杂的概念，所以我们把元类封装在 `Model` 类的定义中，指定 `Model` 类使用 `ModelMetaclass` 为模版。把前面所说的更换类属性名的操作封装在 `ModelMetaclass` 中，使用者为表格编写类的时候只需要继承 `Model` 类，那么运行时就会自动以 `ModelMetaclass` 为模版，得到 `ModelMetaclass` 的所有功能。但是要注意，`Model` 类本身不需要更换类属性名，所以在 `ModelMetaclass` 中我们要排除掉 `Model` 类。
+
+
+
