My_Python_Notebook：使用元类-编写ORM框架part3

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -1206,5 +1206,95 @@ super(type[, object-or-type])
 
 另外，由于使用者不一定明白元类这么复杂的概念，所以我们把元类封装在 `Model` 类的定义中，指定 `Model` 类使用 `ModelMetaclass` 为模版。把前面所说的更换类属性名的操作封装在 `ModelMetaclass` 中，使用者为表格编写类的时候只需要继承 `Model` 类，那么运行时就会自动以 `ModelMetaclass` 为模版，得到 `ModelMetaclass` 的所有功能。但是要注意，`Model` 类本身不需要更换类属性名，所以在 `ModelMetaclass` 中我们要排除掉 `Model` 类。
 
+接下来，直接上代码。元类 `ModelMetaclass`：
+
+```python
+class ModelMetaclass(type):
+    # 四个参数，依次为：准备创建的类对象，类的名字，继承的父类集合，属性&方法集合
+    def __new__(cls, name, bases, attrs):
+        # Model类不需额外操作，先排除掉
+        if name=='Model':
+            return type.__new__(cls, name, bases, attrs)
+        # 其他类（对应具体的表格）则把类属性使用dict存好，绑定到__mappings__属性上
+        # 然后删除掉这些类属性
+        # 这里还动态地要创建的类添加了一个表名属性__table__，直接令表名等于类名
+        # 当然也可以作一些其他修改
+        print('Found model: %s' % name)
+        mappings = dict()
+        for k, v in attrs.items(): # 取出每个类属性
+            # 因为除了用户定义的类属性之外，还有一些继承自父类的属性等等
+            # 所以这里要先判断一下，属于字段类型的属性才需要考虑
+            if isinstance(v, Field):
+                print('Found mapping: %s ==> %s' % (k, v))
+                mappings[k] = v # 使用一个dict保存 类属性名-字段类型实例 的映射
+        for k in mappings.keys():
+            attrs.pop(k)
+        attrs['__mappings__'] = mappings # 把映射绑定到__mappings__属性上
+        attrs['__table__'] = name        # 把表名绑定到__table__属性上
+        return type.__new__(cls, name, bases, attrs)
+```
+
+父类 `Model`：
+
+```python
+class Model(dict, metaclass=ModelMetaclass):
+    def __init__(self, **kw):
+        super(Model, self).__init__(**kw) # 创建一个dict
+    def __getattr__(self, key): # 可以采用点符访问实例属性（字段值）
+        try:
+            return self[key]
+        except KeyError:
+            raise AttributeError(r"'Model' object has no attribute '%s'" % key)
+    def __setattr__(self, key, value): # 可以采用点符修改实例属性（字段值）
+        self[key] = value
+    def insert(self):  # 将实例插入到数据库的对应表格中
+        fields = []
+        values = []
+        # 取得这一行数据的字段名及对应字段值
+        for k, v in self.__mappings__.items():
+            fields.append(v.name)
+            values.append(str(getattr(self, k, None)))
+        # 格式化SQL语句（MySQL语法）
+        sql = 'INSERT INTO %s (%s) values (%s)' % (self.__table__, ','.join(fields), ','.join(values))
+        print('SQL: %s' % sql) # 输出SQL语句，这里我们没有写真的插入数据库的操作，只是举例子
+```
+
+当用户为 `User` 表定义 `User` 类时，Python解释器首先在当前类 `User` 的定义中查找是否有metaclass关键字，如果没有找到，就继续在父类 `Model` 中查找metaclass关键字，因为父类 `Model` 定义了以元类 `ModelMetaclass` 为模版来创建，所以 `User` 类也会以元类 `ModelMetaclass` 为模版来创建。借助元类，我们可以**在运行时动态地修改子类的定义，但使用者定义子类时却不需要显式地声明**。
+
+使用者定义 `User` 类之后，会输出：
+
+```python
+Found model: User
+Found mapping: password ==> <StringField:password>
+Found mapping: name ==> <StringField:username>
+Found mapping: email ==> <StringField:email>
+Found mapping: id ==> <IntegerField:id>
+```
+
+运行时，类定义被元类动态地修改了，使用者定义的四个类属性被集成到 `__mappings__` 属性中，因此不会被实例属性覆盖，也就不会丢失字段名信息了。
+
+创建实例，然后把这个实例（一行数据）插入到数据库：
+
+```python
+>>> # 创建一个实例：
+... u = User(id=12345, name='Michael', email='test@orm.org', password='my-pwd')
+>>> # 插入到表格中：
+... u.insert()
+SQL: INSERT INTO User (email,username,password,id) values (test@orm.org,Michael,my-pwd,12345)
+```
+
+我们也可以看看 `__mappings__` 属性怎么样：
+
+```python
+>>> User.__mappings__
+{'email': <StringField:email>, 'name': <StringField:username>, 'password': <StringField:password>, 'id': <IntegerField:id>}
+>>> u.__mappings__
+{'email': <StringField:email>, 'name': <StringField:username>, 'password': <StringField:password>, 'id': <IntegerField:id>}
+```
+
+正如我们定义那样，它是一个 `dict`，里面保存着各个字段的名字和它们的数据类型。
+
+虽然我们没有真的实现插入数据库，但可以看到打印出的SQL语句是正确的，要实现完整的功能，只要再使用数据库模块的接口就可以了。通过这样短短的不到100行代码，我们就借助元类实现了一个精简的 ORM 框架。
+
 
 
