My_Python_Notebook：使用元类-目录

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -2,6 +2,46 @@
 
 前面一章介绍了OOP最基础的数据封装、继承和多态3个概念，还有一些类和实例的操作。而在Python中，OOP还有很多更高级的特性，这一章会讨论多重继承、定制类、元类等概念。
 
+## 目录
+
+<!-- MarkdownTOC -->
+
+- [使用 \_\_slots\_\_](#使用-\\slots\\)
+    - [动态绑定属性](#动态绑定属性)
+    - [动态绑定方法](#动态绑定方法)
+    - [限制可绑定的属性/方法](#限制可绑定的属性方法)
+- [使用@property](#使用property)
+    - [为何需要@property](#为何需要property)
+    - [如何实现@property](#如何实现property)
+    - [练习](#练习)
+    - [小结](#小结)
+- [多重继承](#多重继承)
+    - [为何需要多重继承](#为何需要多重继承)
+    - [使用多重继承](#使用多重继承)
+    - [MixIn](#mixin)
+    - [小结](#小结-1)
+- [定制类](#定制类)
+    - [\_\_str\_\_](#\\str\\)
+    - [\_\_iter\_\_](#\\iter\\)
+    - [\_\_getitem\_\_](#\\getitem\\)
+    - [\_\_getattr\_\_](#\\getattr\\)
+    - [\_\_call\_\_](#\\call\\)
+    - [小结](#小结-2)
+- [使用枚举类](#使用枚举类)
+    - [为何需要枚举类](#为何需要枚举类)
+    - [如何使用枚举类](#如何使用枚举类)
+    - [自定义枚举类](#自定义枚举类)
+    - [小结](#小结-3)
+- [使用元类](#使用元类)
+    - [type函数](#type函数)
+    - [什么是元类](#什么是元类)
+    - [怎样使用元类](#怎样使用元类)
+    - [编写ORM框架](#编写orm框架)
+    - [小结](#小结-4)
+
+<!-- /MarkdownTOC -->
+
+
 ## 使用 \_\_slots\_\_
 
 ### 动态绑定属性
