My_Python_Notebook：错误处理-错误的调用堆栈

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -164,3 +164,93 @@ def main():
 这里我们在 `main` 函数中调用 `bar` 函数，在 `bar` 函数中调用 `foo` 函数。我们使用 `try` 模块来运行调用代码，当 `foo` 函数发生错误时，我们不需要返回错误码，也不需要一级级上报，程序会自动寻找对应的 `except` 语句进行错误处理。也即是说，**不需要在每个可能出错的地方去捕获错误，只要在合适的层次去捕获错误就可以了**。这样一来，我们就能使用非常简洁的方式来处理程序运行中可能出现的错误了。
 
 ---
+
+### 错误的调用堆栈
+
+如果错误没有被捕获，就会一直往上抛，最后**被Python解释器捕获**，打印出错误信息，然后程序终止运行。
+
+编写一个包含如下代码的 `err.py` 文件：
+
+```python
+# err.py:
+def foo(s):
+    return 10 / int(s)
+
+def bar(s):
+    return foo(s) * 2
+
+def main():
+    bar('0')
+
+main()
+```
+
+执行该文件，结果如下：
+
+```python
+$ python3 err.py
+Traceback (most recent call last):
+  File "err.py", line 11, in <module>
+    main()
+  File "err.py", line 9, in main
+    bar('0')
+  File "err.py", line 6, in bar
+    return foo(s) * 2
+  File "err.py", line 3, in foo
+    return 10 / int(s)
+ZeroDivisionError: division by zero
+```
+
+出错并不可怕，可怕的是不知道哪里出错了。解读错误信息是定位错误的关键。我们**从上往下可以看到整个错误的函数调用链**：
+
+错误信息的第1行：
+
+```python
+Traceback (most recent call last):
+```
+
+这句话告诉我们下面是错误的跟踪信息。
+
+错误信息的第2~3行：
+
+```python
+  File "err.py", line 11, in <module>
+    main()
+```
+
+告诉我们调用 `main()` 出错了，具体是在代码文件 `err.py` 的第11行代码。
+
+错误信息的第4~5行：
+
+```python
+  File "err.py", line 9, in main
+    bar('0')
+```
+
+告诉我们调用 `bar('0')` 出错了，具体是在代码文件 `err.py` 的第9行代码。
+
+错误信息的第6~7行：
+
+```python
+  File "err.py", line 6, in bar
+    return foo(s) * 2
+```
+
+告诉我们调用 `foo(s)` 出错了，具体是在代码文件 `err.py` 的第6行代码。
+
+错误信息的第8~9行：
+
+```python
+  File "err.py", line 3, in foo
+    return 10 / int(s)
+```
+
+告诉我们语句 `return 10 / int(s)` 出错了，具体是在代码文件 `err.py` 的第3行代码。这是错误的源头，因为下面打印了具体的错误原因：
+
+```python
+ZeroDivisionError: integer division or modulo by zero
+```
+
+根据错误类型 `ZeroDivisionError`，我们可以判断 `int(s)` 本身并没有出错，但是 `int(s)`返回了0，在计算 `10 / 0` 时程序出错了。这和我们使用 `except` 来捕获错误信息时打印出的内容是一样的。
+
+---
