My_Python_Notebook：错误处理-记录错误

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -165,7 +165,7 @@ def main():
 
 ---
 
-### 错误的调用堆栈
+### 错误的调用链
 
 如果错误没有被捕获，就会一直往上抛，最后**被Python解释器捕获**，打印出错误信息，然后程序终止运行。
 
@@ -252,5 +252,50 @@ ZeroDivisionError: integer division or modulo by zero
 ```
 
 根据错误类型 `ZeroDivisionError`，我们可以判断 `int(s)` 本身并没有出错，但是 `int(s)`返回了0，在计算 `10 / 0` 时程序出错了。这和我们使用 `except` 来捕获错误信息时打印出的内容是一样的。
+
+---
+
+### 记录错误
+
+上一小节讲到，如果不在代码中进行错误处理，Python解释器最终会捕获错误并打印出错误调用链，但同时程序也会终止运行。那么，有没有**既能打印出错误调用链，帮助我们分析出错的原因和源头，同时又能让程序继续运行**的方法呢？有的，Python内置的 `logging` 模块可以帮助我们非常容易地记录错误信息。
+
+这里举一个简单的例子，首先编写 `err_logging.py` 文件：
+
+```python
+import logging
+
+def foo(s):
+    return 10 / int(s)
+
+def bar(s):
+    return foo(s) * 2
+
+def main():
+    try:
+        bar('0')
+    except Exception as e:
+        logging.exception(e) # 使用logging模块的exception方法打印错误信息
+
+main()
+print('END')
+```
+
+同样是打印出错误调用链，但程序打印完错误信息后会继续运行，并正常结束：
+
+```python
+$ python3 err_logging.py
+ERROR:root:division by zero
+Traceback (most recent call last):
+  File "err_logging.py", line 13, in main
+    bar('0')
+  File "err_logging.py", line 9, in bar
+    return foo(s) * 2
+  File "err_logging.py", line 6, in foo
+    return 10 / int(s)
+ZeroDivisionError: division by zero
+END
+```
+
+此外，我们还可以借助 `logging` 模块把错误信息记录到日志文件里，方便事后排查，这里不作举例了。
 
 ---
