My_Python_Notebook：错误处理-抛出错误

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -299,3 +299,72 @@ END
 此外，我们还可以借助 `logging` 模块把错误信息记录到日志文件里，方便事后排查，这里不作举例了。
 
 ---
+
+### 抛出错误
+
+前面我们说到，在Python中错误都是通过类来实现的，捕获一个错误就是捕获到该类的一个实例。**错误并不是凭空产生的，而是有意地创建并抛出的**。Python的内置函数会抛出很多不同类型的错误，我们自己编写函数时也可以这样做。
+
+举一个简单的例子，首先编写 `err_raise.py` 文件：
+
+```python
+class FooError(ValueError):
+    pass
+
+def foo(s):
+    n = int(s)
+    if n==0:
+        raise FooError('invalid value: %s' % s)
+    return 10 / n
+
+foo('0')
+```
+
+这里我们自定义了一个错误类型 `FooError`，继承自 `ValueError`。**使用 `raise` 语句抛出一个错误的实例**。执行 `err_raise.py`，最终可以跟踪到我们自定义的错误类型：
+
+```python
+$ python3 err_raise.py
+Traceback (most recent call last):
+  File "err_throw.py", line 11, in <module>
+    foo('0')
+  File "err_throw.py", line 8, in foo
+    raise FooError('invalid value: %s' % s)
+__main__.FooError: invalid value: 0
+```
+
+**只有在必要的时候才自定义错误类型**。如果可以使用Python内置的错误类型（比如ValueError，TypeError等等），就应尽量使用Python内置的错误类型。
+
+最后，我们来看另一种错误处理的方式，首先编写 `err_reraise.py` 文件：
+
+```python
+def foo(s):
+    n = int(s)
+    if n==0:
+        raise ValueError('invalid value: %s' % s)
+    return 10 / n
+
+def bar():
+    try:
+        foo('0')
+    except ValueError as e:
+        print('ValueError!')
+        raise
+
+bar()
+```
+
+在 `bar()` 函数中，我们明明已经捕获了错误，但是，打印一个 `ValueError` 之后，又把错误通过 `raise` 语句再次抛出去了，为什么呢？
+
+其实这种错误处理方式并没有错，而且相当常见。有时候，捕获错误的目的只是记录一下，便于后续追踪。如果当前函数没有处理该错误的逻辑，最恰当的方式就是继续往上抛，让顶层调用者去处理。好比一个员工处理不了一个问题时，就把问题抛给他的老板，如果他的老板也处理不了，就一直往上抛，最终抛给CEO去处理。
+
+特别地，当 `raise` 语句不带参数时，会把当前错误原样抛出。但既然我们可以在 `except` 语句块中使用 `raise` 语句，那就可以轻易地抛出一个别的错误，从而**把一种错误类型转换成另一种错误类型**。例如：
+
+```python
+try:
+    10 / 0
+except ZeroDivisionError:
+    raise ValueError('input error!')
+```
+
+当然，我们不能滥用这样的功能，只有在有必要进行转换时才进行合理的转换。
+
+---
