My_Python_Notebook：错误处理-小结

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -368,3 +368,9 @@ except ZeroDivisionError:
 当然，我们不能滥用这样的功能，只有在有必要进行转换时才进行合理的转换。
 
 ---
+
+### 小结
+
+使用Python内置的 `try...except...finally` 机制可以十分方便地处理错误。但出错时，会分析错误信息并定位错误发生的位置才是最关键的。
+
+我们编写模块时可以在代码中主动抛出错误，让调用者来处理相应的错误。但是，我们应当在模块的文档中写清楚可能会抛出哪些错误，以及错误产生的原因。
