My_Python_Notebook：调试-直接打印

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -374,3 +374,41 @@ except ZeroDivisionError:
 使用Python内置的 `try...except...finally` 机制可以十分方便地处理错误。但出错时，会分析错误信息并定位错误发生的位置才是最关键的。
 
 我们编写模块时可以在代码中主动抛出错误，让调用者来处理相应的错误。但是，我们应当在模块的文档中写清楚可能会抛出哪些错误，以及错误产生的原因。
+
+---
+
+<br>
+
+## 调试
+
+程序运行总会有各种各样的bug，有的bug很简单，看看错误信息就知道；但有的bug很复杂，我们不但需要知道错误类型和出错的地方，还需要知道一些变量的值才能做出准确的推断。**跟踪程序的执行，查看变量的值**这个过程就称为调试，这一节会介绍各种调试程序的手段。
+
+### 直接打印
+
+直接打印是一种直接粗暴但十分有效的方法，简单来说就是使用 `print()` 把可能有问题的变量打印出来看看：
+
+```python
+def foo(s):
+    n = int(s)
+    print('n = %d' % n)
+    return 10 / n
+
+def main():
+    foo('0')
+
+main()
+```
+
+执行后在输出中查找打印的变量值：
+
+```python
+$ python3 err.py
+n = 0
+Traceback (most recent call last):
+  ...
+ZeroDivisionError: integer division or modulo by zero
+```
+
+这样我们就知道除零错误是因为变量 `n` 的值不合理而产生的了。
+
+但是使用直接打印来调试有一个很大的缺点，在完成调试后，我们还得删掉代码里用于输出变量值的 `pinrt()`，如果我们要观察很多变量的值，那么代码里就会到处都是 `print()`，运行结果也会包含很多垃圾信息，删除的时候就会很麻烦。
