My_Python_Notebook：调试-logging

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -429,7 +429,7 @@ def main():
     foo('0')
 ```
 
-我们看到，使用 `assert` 的方法是在它后面接一个表达式以及一个字符串，如果表达式不为 `True`，则断言失败，此时会抛出 `AssertionError`，并输出错误信息（跟在表达式后面的字符串）：
+我们看到，使用 `assert` 的方法是在它后面接一个表达式以及一个字符串，如果表达式不为 `True`，则断言失败，此时会抛出 `AssertionError` 错误，并输出自定义的错误信息（跟在表达式后面的字符串）：
 
 ```python
 $ python3 err.py
@@ -451,4 +451,42 @@ ZeroDivisionError: division by zero
 
 ---
 
+### logging
+
+我们还可以把 `print()` 替换为 `logging`。和 `assert` 相比，使用 `logging` 不会抛出错误，而且不但能打印信息还能方便地保存到日志中。这里简单举个例子，首先编写 `err.py` 文件：
+
+```python
+import logging
+
+s = '0'
+n = int(s)
+logging.info('n = %d' % n)
+print(10 / n)
+```
+
+`logging.info()` 可以输出一段文本。但运行上述代码，发现除了抛出 `ZeroDivisionError` 错误之外，没有任何信息。怎么回事呢？
+
+别急，在 `import logging` 之后添加一行配置再试试：
+
+```python
+import logging
+logging.basicConfig(level=logging.INFO)
+```
+
+再次运行，此时能看到输出了：
+
+```python
+$ python3 err.py
+INFO:root:n = 0
+Traceback (most recent call last):
+  File "err.py", line 8, in <module>
+    print(10 / n)
+ZeroDivisionError: division by zero
+```
+
+这就是使用 `logging` 的好处了，它允许开发者**指定记录信息的级别**，有 `debug`，`info`，`warning`，`error` 等几个级别，当我们指定 `level=INFO` 时，`logging.debug` 就不起作用了。同理，指定 `level=WARNING` 后，`debug` 和 `info` 就不起作用了。这样一来，我们可以很方便地统一控制输出哪个级别的信息，而不用担心调试完还要删除的问题了。
+
+使用 `logging` 还有另一个好处就是可以通过很简单的配置，把一条语句同时输出到不同的地方，比如命令行和文件。
+
+---
 
