My_Python_Notebook：调试-断言

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -412,3 +412,43 @@ ZeroDivisionError: integer division or modulo by zero
 这样我们就知道除零错误是因为变量 `n` 的值不合理而产生的了。
 
 但是使用直接打印来调试有一个很大的缺点，在完成调试后，我们还得删掉代码里用于输出变量值的 `pinrt()`，如果我们要观察很多变量的值，那么代码里就会到处都是 `print()`，运行结果也会包含很多垃圾信息，删除的时候就会很麻烦。
+
+---
+
+### 断言
+
+我们可以用**断言（assert）**来替代 `print()`，例如：
+
+```python
+def foo(s):
+    n = int(s)
+    assert n != 0, 'n is zero!'
+    return 10 / n
+
+def main():
+    foo('0')
+```
+
+我们看到，使用 `assert` 的方法是在它后面接一个表达式以及一个字符串，如果表达式不为 `True`，则断言失败，此时会抛出 `AssertionError`，并输出错误信息（跟在表达式后面的字符串）：
+
+```python
+$ python3 err.py
+Traceback (most recent call last):
+  ...
+AssertionError: n is zero!
+```
+
+程序中如果到处充斥着 `assert` 语句，似乎和使用 `print()` 相比也没有什么不同。但是，我们可以**在启动Python解释器时可以用 `-O` 参数来关闭 `assert`**：
+
+```python
+$ python3 -O err.py
+Traceback (most recent call last):
+  ...
+ZeroDivisionError: division by zero
+```
+
+关闭后，可以把所有的 `assert` 语句当成 `pass` 来看，此时断言就不会发挥作用了。
+
+---
+
+
